# gnu_qdiff

./: INSTALL  Makefile  Makefile.am  Makefile.common  Makefile.in  Makefile.rules  config.h.in  configure  configure.ac  qdiff.cc  qdiff.doc  tappconfig.cc  tappconfig.h  tarray.h  tassocarray.h  tbaseexception.h  tdiffoutput.cc  tdiffoutput.h  terror.cc  terror.h  texception.h  tfiletools.cc  tfiletools.h  tmap.h  tminmax.h  trelops.h  trotfile.cc  trotfile.h  tstring.cc  tstring.h  ttypes.h  tvector.h
